Restored title in prose.yaml

--- a/_prose.yml
+++ b/_prose.yml
@@ -9,6 +9,11 @@ prose:
       user: "Ana Ruiz Varona"
   metadata:
     content/project:
+      - name: "title"
+        field:
+          element: "text"
+          label: "Title"
+          placeholder: "El título del proyecto"
       - name: "date"
         field:
           element: "text"
