Changed font type.

--- a/config.toml
+++ b/config.toml
@@ -42,7 +42,7 @@ defaultContentLanguageInSubdir = false
 
   # Font style.
   #   Choose from `default`, `classic`, or `playfair`.
-  font = "classic"
+  font = "default"
 
   # Your details.
   name = "Arquitecturas OpenSource"
