--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,8 @@
-[context.build]
+[context.production.environment]
+  HUGO_VERSION = "0.30.2"
+
+[context.deploy-preview.environment]
+  HUGO_VERSION = "0.30.2"
+
+[context.branch-deploy]
   HUGO_VERSION = "0.30.2"
